manifests/log-producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-producer
  namespace: logging
  labels:
    app: log-producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-producer
  template:
    metadata:
      labels:
        app: log-producer
    spec:
      containers:
        - name: log-producer
          image: log-producer:v1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 100m
